[gd_scene load_steps=12 format=3 uid="uid://cl0gfqdtf6wv3"]

[ext_resource type="PackedScene" uid="uid://j2jy5p1ojh58" path="res://addons/gui_manager/nodes/gui/gui/gui.tscn" id="1_imule"]
[ext_resource type="Script" path="res://nodes/screens/quiz_attempt_screen/quiz_attempt_screen.gd" id="2_6bxe1"]
[ext_resource type="PackedScene" uid="uid://visuur1utug0" path="res://nodes/gui/gaussian_blur/gaussian_blur.tscn" id="3_8smjl"]
[ext_resource type="PackedScene" uid="uid://3w1kcvfjrr6m" path="res://nodes/gui/black_overlay/black_overlay.tscn" id="3_hycv7"]
[ext_resource type="PackedScene" uid="uid://gclvecuvrsiy" path="res://nodes/gui/quiz_attempt_gui/quiz_attempt_gui.tscn" id="3_suh6i"]
[ext_resource type="PackedScene" uid="uid://7gri71kaffvv" path="res://addons/audio_manager_and_plus/nodes/components/audio_manager_player/audio_manager_player.tscn" id="5_le8am"]
[ext_resource type="Script" path="res://addons/audio_manager_and_plus/scripts/arguments/audio_stream_player_arguments.gd" id="6_pdtbx"]
[ext_resource type="AudioStream" uid="uid://lf5grp2812qx" path="res://assets/audio/music/bg_assesment.ogg" id="7_lxr2a"]
[ext_resource type="PackedScene" uid="uid://der1edoxrqxln" path="res://nodes/gui_components/set_game_state_on_gui_active/set_game_state_on_gui_active.tscn" id="8_k4107"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbiwb"]

[sub_resource type="Resource" id="Resource_k6v7v"]
script = ExtResource("6_pdtbx")
sound = ExtResource("7_lxr2a")
play_from_position = 0
pitch_scale = 1.0
volume_slider = 1.0
change_db = false
volume_db = 0.0
change_bus = false
bus = &"Music"

[node name="QuizAttemptScreen" node_paths=PackedStringArray("assesment_music", "quiz_attempt_gui", "idle", "happy", "sad", "reaction_sprites") instance=ExtResource("1_imule")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6bxe1")
assesment_music = NodePath("Audio/AssesmentMusic")
quiz_attempt_gui = NodePath("MarginContainer/Control/CenterContainer/Offset/QuizAttemptGUI")
quiz = null
entity_answering = null
idle = NodePath("MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites/Idle")
happy = NodePath("MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites/Happy")
sad = NodePath("MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites/Sad")
reaction_sprites = NodePath("MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites")

[node name="BlackOverlay" parent="." index="0" instance=ExtResource("3_hycv7")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="GaussianBlur" parent="." index="1" instance=ExtResource("3_8smjl")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Control" type="HBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Offset" type="Control" parent="MarginContainer/Control/CenterContainer" index="0"]
layout_mode = 2

[node name="QuizAttemptGUI" parent="MarginContainer/Control/CenterContainer/Offset" index="0" instance=ExtResource("3_suh6i")]
layout_mode = 2
offset_left = 122.0
offset_right = 122.0
grow_vertical = 2
size_flags_horizontal = 6
metadata/_edit_use_anchors_ = true

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/Control" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpriteRoot" type="Control" parent="MarginContainer/Control/CenterContainer2" index="0"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ReactionSprites" type="TabContainer" parent="MarginContainer/Control/CenterContainer2/SpriteRoot" index="0"]
layout_mode = 0
offset_left = -243.0
offset_top = -374.0
offset_right = 335.0
offset_bottom = 366.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_hbiwb")
current_tab = 0
clip_tabs = false
tabs_visible = false
metadata/_edit_use_anchors_ = true

[node name="Idle" type="TextureRect" parent="MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites" index="1"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
metadata/_tab_index = 0

[node name="Happy" type="TextureRect" parent="MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites" index="2"]
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 5
metadata/_tab_index = 1

[node name="Sad" type="TextureRect" parent="MarginContainer/Control/CenterContainer2/SpriteRoot/ReactionSprites" index="3"]
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 5
metadata/_tab_index = 2

[node name="AssesmentMusic" parent="Audio" index="4" instance=ExtResource("5_le8am")]
type = 1
audio = SubResource("Resource_k6v7v")

[node name="SetGameStateOnGUIActive" parent="." index="4" node_paths=PackedStringArray("gui") instance=ExtResource("8_k4107")]
gui = NodePath("..")
activated_state = "assesment"
deactivated_state = "playing"

[connection signal="deactivated" from="MarginContainer/Control/CenterContainer/Offset/QuizAttemptGUI" to="." method="_on_quiz_attempt_gui_deactivated"]
